--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,9 @@
     "react-app"
   ],
   "rules": {
-     "semi": [2, "never"]
+     "semi": [2, "never"],
+     "no-self-compare": 0,
+     "jsx-a11y/anchor-has-content": 0,
   },
   "parser": "babel-eslint"
 }
