修改目录结构

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
+    "target": "es6",
     "paths": {
-      "@/*": ["./src/packages/*"],
+      "@/*": ["./packages/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
